--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,39 @@
-#solution
-*.sln
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
 *.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
 *.lib
-*.vcxproj
-*.png
 
-#Folder
+# Executables
+*.exe
+*.out
+*.app
 
-Debug/
-Release/
-.vs/
-external/
-include/
-lib/
-x64/
+
+# custom
+build/
+.vscode/
+
+*.DS_Store
