[ADD] Draw Map (World), Quad class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@
 cmake_minimum_required(VERSION 3.13)
 
 # 변수명 : PROJECT_NAME, 값 : cmake_project_example
-set(PROJECT_NAME opengl_project)
+set(PROJECT_NAME wind_simulation)
 
 # C++ 17버전 쓸것이다.
 set(CMAKE_CXX_STANDARD 17)
@@ -23,7 +23,7 @@ if(APPLE)
 endif()
 
 # glfw 변수 정의
-set(WINDOW_NAME "OpenGL Project")
+set(WINDOW_NAME "Wind Simulation")
 set(WINDOW_WIDTH 640)
 set(WINDOW_HEIGHT 480)
 
