[UPDATE] MSVC compiler encoding problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,12 @@ if(APPLE)
 endif()
 
 # window msvc compiler encoding problem
-if(MSVC)
-    add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
-    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
-endif()
+
+# add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
+# add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+
+set(CMAKE_CXX_FLAGS "/utf-8")
+set(CMAKE_C_FLAGS "/utf-8")
 
 # glfw 변수 정의
 set(WINDOW_NAME "Wind Simulation")
